# hsglitch

./: .gitignore  .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  fourmolu.yaml  hsglitch.cabal
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: Main.hs
src/HsGlitch/: CLI.hs  Codec.hs  Filter.hs  Parser.hs  Pipeline.hs  Pixel.hs
test/: SmokeSpec.hs
test/HsGlitch/: CLISpec.hs  CodecSpec.hs  FilterSpec.hs  ParserSpec.hs  PipelineSpec.hs  PixelSpec.hs
